# ss-device-centre

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults.template
components/common/include/: component_deps.h
components/ld2450_driver/: CMakeLists.txt  README.md
components/ld2450_driver/include/: ld2450.h
components/ld2450_driver/src/: ld2450.c  ld2450_config.c  ld2450_parser.c  ld2450_private.h
components/mqtt_manager/: CMakeLists.txt
components/mqtt_manager/include/: mqtt_manager.h
components/mqtt_manager/src/: mqtt_manager.c  mqtt_memory_debug.c
components/occupancy_manager/: CMakeLists.txt  README.md
components/occupancy_manager/include/: occupancy_manager.h
components/occupancy_manager/src/: occupancy_manager.c
components/people_counter/: CMakeLists.txt  README.md
components/people_counter/include/: people_counter.h
components/people_counter/src/: people_counter.c
components/remote_control/: CMakeLists.txt  README.md
components/remote_control/include/: remote_control.h
components/remote_control/src/: remote_control.c  remote_memory_debug.c
main/: CMakeLists.txt  main.c  secrets.h.template
